syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.enel.notification.grpc";
option java_outer_classname = "MessageProto";

package com.enel.notification.grpc;

service MessageService {
  rpc welcome (WelcomeRequest) returns (WelcomeResponse) {}
}

message WelcomeRequest {
  string name = 1;
}

message WelcomeResponse {
  string message = 1;
}
